--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -65,6 +65,7 @@
     .paper-box-text{
         max-width: 100%;
         order: 1;
+        margin-left: -180px;
     }
     
     @include breakpoint($medium) {
