--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -65,7 +65,7 @@
     .paper-box-text{
         max-width: 100%;
         order: 1;
-        margin-left: -180px;
+        // margin-left: -180px;
     }
     
     @include breakpoint($medium) {
